--- a/__index_application/index_application.yaml
+++ b/__index_application/index_application.yaml
@@ -12,8 +12,8 @@ spec:
     directory:
       jsonnet: {}
       recurse: true
-    path: argocd-manifests/_indexes
-    repoURL: git@github.com:whh881114/learning.git
+    path: _indexes
+    repoURL: git@github.com:whh881114/argocd-manifests.git
     targetRevision: master
   # syncPolicy:
   #   automated:
