安装kubernetes-dashboard，启用kong，配置metrics-server

--- a/_charts/kubernetes-dashboard/7.5.0/charts/metrics-server/values.yaml
+++ b/_charts/kubernetes-dashboard/7.5.0/charts/metrics-server/values.yaml
@@ -3,9 +3,9 @@
 # Declare variables to be passed into your templates.
 
 image:
-  repository: registry.k8s.io/metrics-server/metrics-server
+  repository: harbor.idc.roywong.work/registry.k8s.io/metrics-server/metrics-server
   # Overrides the image tag whose default is v{{ .Chart.AppVersion }}
-  tag: ""
+  tag: "0.7.1"
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
@@ -172,9 +172,9 @@ resources:
   requests:
     cpu: 100m
     memory: 200Mi
-  # limits:
-  #   cpu:
-  #   memory:
+   limits:
+     cpu: 1
+     memory: 1024Mi
 
 extraVolumeMounts: []
 
