--- a/_charts/kubernetes-dashboard/7.5.0/values.yaml
+++ b/_charts/kubernetes-dashboard/7.5.0/values.yaml
@@ -352,7 +352,11 @@ metrics-server:
 ## Required Kong sub-chart with DBless configuration to act as a gateway
 ## for our all containers.
 kong:
-  enabled: false
+  enabled: true
+  replicaCount: 3
+  image:
+    repository: harbor.idc.roywong.work/docker.io/library/kong
+    tag: 3.6
   ## Configuration reference: https://docs.konghq.com/gateway/3.6.x/reference/configuration
   env:
     dns_order: LAST,A,CNAME,AAAA,SRV
