kubernetes-dashboard，kong启用http协议

--- a/_charts/kubernetes-dashboard/7.5.0/values.yaml
+++ b/_charts/kubernetes-dashboard/7.5.0/values.yaml
@@ -372,7 +372,7 @@ kong:
   proxy:
     type: ClusterIP
     http:
-      enabled: false
+      enabled: true
 
 ## Optional Cert Manager sub-chart configuration
 ## Enable this if you don't already have cert-manager enabled on your cluster.
