kubernetes-dashboard，kong启用http协议，并且定义协议端口为80。

--- a/_charts/kubernetes-dashboard/7.5.0/values.yaml
+++ b/_charts/kubernetes-dashboard/7.5.0/values.yaml
@@ -373,6 +373,8 @@ kong:
     type: ClusterIP
     http:
       enabled: true
+    tls:
+      servicePort: 80
 
 ## Optional Cert Manager sub-chart configuration
 ## Enable this if you don't already have cert-manager enabled on your cluster.
