--- a/_charts/kubernetes-dashboard/7.5.0/values.yaml
+++ b/_charts/kubernetes-dashboard/7.5.0/values.yaml
@@ -96,7 +96,6 @@ app:
     hosts:
       # Keep 'localhost' host only if you want to access Dashboard using 'kubectl port-forward ...' on:
       # https://localhost:8443
-      - "*.idc-ingress-nginx-lan.roywong.work"
       - kubernetes-dashboard.idc-ingress-nginx-lan.roywong.work
     # - kubernetes.dashboard.domain.com
     ingressClassName: ingress-nginx-lan
@@ -108,7 +107,7 @@ app:
     #    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     #    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     #    nginx.ingress.kubernetes.io/ssl-redirect: "true"
-    useDefaultAnnotations: false
+    useDefaultAnnotations: true
     pathType: ImplementationSpecific
     # If path is not the default (/), rewrite-target annotation will be added to the Ingress.
     # It allows serving Kubernetes Dashboard on a sub-path. Make sure that the configured path
