--- a/_charts/kube-prometheus-stack/61.8.0/values.yaml
+++ b/_charts/kube-prometheus-stack/61.8.0/values.yaml
@@ -728,8 +728,8 @@ alertmanager:
 
     ## AlermanagerConfig to be used as top level configuration
     ##
-    alertmanagerConfiguration:
-      name: global-alertmanager-Configuration
+    # alertmanagerConfiguration:
+    #   name: global-alertmanager-Configuration
 
     ## Example with select a global alertmanagerconfig
     # alertmanagerConfiguration:
