邮箱告警时，相关配置需要helm中定义，写在alertmanager.config中。

--- a/_charts/kube-prometheus-stack/61.8.0/values.yaml
+++ b/_charts/kube-prometheus-stack/61.8.0/values.yaml
@@ -303,6 +303,13 @@ alertmanager:
   config:
     global:
       resolve_timeout: 5m
+      smtp_smarthost: 'smtp.163.com'
+      smtp_from: 'roy_wong_20210324@163.com'
+      smtp_auth_username: 'roy_wong_20210324@163.com'
+      smtp_auth_password:
+        name: email-password
+        key: password
+      smtp_require_tls: true
     inhibit_rules:
       - source_matchers:
           - 'severity = critical'
