--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -915,7 +915,7 @@ controller:
 
 agent:
   # -- Enable Kubernetes plugin jnlp-agent podTemplate
-  enabled: true
+  enabled: false
   # -- The name of the pod template to use for providing default values
   defaultsProviderTemplate: ""
 
