部署jenkins，controller中启用JCasC。

--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -505,7 +505,7 @@ controller:
   # etc. Best reference is https://<jenkins_url>/configuration-as-code/reference. The example below creates a welcome message:
   JCasC:
     # -- Enables default Jenkins configuration via configuration as code plugin
-    defaultConfig: false
+    defaultConfig: true
 
     # If true, the init container deletes all the plugin config files and Jenkins Config as Code overwrites any existing configuration
     # -- Whether Jenkins Config as Code should overwrite any existing configuration
@@ -1338,7 +1338,7 @@ serviceAccount:
 
 serviceAccountAgent:
   # -- Configures if an agent ServiceAccount should be created
-  create: false
+  create: true
 
   # If not set and create is true, a name is generated using the fullname template
   # -- The name of the agent ServiceAccount to be used by access-controlled resources
