--- a/_charts/kube-prometheus-stack/61.8.0/values.yaml
+++ b/_charts/kube-prometheus-stack/61.8.0/values.yaml
@@ -1962,7 +1962,7 @@ kubeScheduler:
 ## Component scraping kube proxy
 ##
 kubeProxy:
-  enabled: true
+  enabled: false
 
   ## If your kube proxy is not deployed as a pod, specify IPs it can be found on
   ##
@@ -2037,10 +2037,7 @@ kubeProxy:
     ## RelabelConfigs to apply to samples before scraping
     ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#relabelconfig
     ##
-    relabelings:
-      - sourceLabels: [ __meta_kubernetes_pod_ip ]
-        targetLabel: __address__
-        replacement: "$1:10249"
+    relabelings: []
     # - action: keep
     #   regex: 'kube_(daemonset|deployment|pod|namespace|node|statefulset).+'
     #   sourceLabels: [__name__]
