转发kube-system监控端口：增加容忍度配置。

--- a/monitoring/forward-kube-system-metrics.yaml
+++ b/monitoring/forward-kube-system-metrics.yaml
@@ -40,3 +40,7 @@ spec:
           - TCP:127.0.0.1:2381
       restartPolicy: Always
       dnsPolicy: ClusterFirstWithHostNet
+      tolerations:
+        - key: "node-role.kubernetes.io/control-plane"
+          operator: "Exists"
+          effect: "NoSchedule"
