转发kube-system监控端口：修改启动方式。

--- a/monitoring/forward-kube-system-metrics.yaml
+++ b/monitoring/forward-kube-system-metrics.yaml
@@ -22,9 +22,9 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: status.hostIP
+          command: ["/bin/sh", "-c"]
           args:
-          - TCP-LISTEN:10249,fork,reuseaddr,bind=$NODE_IP
-          - TCP:127.0.0.1:10249
+            - socat TCP-LISTEN:10249,fork,reuseaddr,bind=$NODE_IP TCP:127.0.0.1:10249
         - name: forward-kube-controller-manager
           image: harbor.idc.roywong.work/docker.io/alpine/socat:1.8.0.1
           imagePullPolicy: IfNotPresent
@@ -33,9 +33,9 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: status.hostIP
+          command: ["/bin/sh", "-c"]
           args:
-          - TCP-LISTEN:10257,fork,reuseaddr,bind=$NODE_IP
-          - TCP:127.0.0.1:10257
+            - socat TCP-LISTEN:10257,fork,reuseaddr,bind=$NODE_IP TCP:127.0.0.1:10257
         - name: forward-kube-scheduler
           image: harbor.idc.roywong.work/docker.io/alpine/socat:1.8.0.1
           imagePullPolicy: IfNotPresent
@@ -44,9 +44,9 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: status.hostIP
+          command: ["/bin/sh", "-c"]
           args:
-          - TCP-LISTEN:10259,fork,reuseaddr,bind=$NODE_IP
-          - TCP:127.0.0.1:10259
+            - socat TCP-LISTEN:10259,fork,reuseaddr,bind=$NODE_IP TCP:127.0.0.1:10259
         - name: forward-kube-etcd
           image: harbor.idc.roywong.work/docker.io/alpine/socat:1.8.0.1
           imagePullPolicy: IfNotPresent
@@ -55,9 +55,9 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: status.hostIP
+          command: ["/bin/sh", "-c"]
           args:
-          - TCP-LISTEN:2381,fork,reuseaddr,bind=$NODE_IP
-          - TCP:127.0.0.1:2381
+            - socat TCP-LISTEN:2381,fork,reuseaddr,bind=$NODE_IP TCP:127.0.0.1:2381
       restartPolicy: Always
       dnsPolicy: ClusterFirstWithHostNet
       tolerations:
