--- a/_charts/kube-prometheus-stack/61.8.0/values.yaml
+++ b/_charts/kube-prometheus-stack/61.8.0/values.yaml
@@ -1040,14 +1040,14 @@ grafana:
 
   # # To make Grafana persistent (Using Statefulset)
   # #
-  useStatefulSet: true
+  useStatefulSet: false
   persistence:
     enabled: true
-    type: sts
+    type: pvc
     storageClassName: "infra"
     accessModes:
       - ReadWriteOnce
-    size: 20Gi
+    size: 10Gi
     finalizers:
       - kubernetes.io/pvc-protection
 
