--- a/_charts/loki/6.29.0/values.override.yaml
+++ b/_charts/loki/6.29.0/values.override.yaml
@@ -558,86 +558,11 @@ loki:
 
 # -- Section for configuring optional Helm test
 test:
-  enabled: true
-  # -- Used to directly query the metrics endpoint of the canary for testing, this approach avoids needing prometheus for testing.
-  # This in a newer approach to using prometheusAddress such that tests do not have a dependency on prometheus
-  canaryServiceAddress: "http://loki-canary:3500/metrics"
-  # -- Address of the prometheus server to query for the test. This overrides any value set for canaryServiceAddress.
-  # This is kept for backward compatibility and may be removed in future releases. Previous value was 'http://prometheus:9090'
-  prometheusAddress: ""
-  # -- Number of times to retry the test before failing
-  timeout: 1m
-  # -- Additional labels for the test pods
-  labels: {}
-  # -- Additional annotations for test pods
-  annotations: {}
-  # -- Image to use for loki canary
-  image:
-    # -- The Docker registry
-    registry: docker.io
-    # -- Docker image repository
-    repository: grafana/loki-helm-test
-    # -- Overrides the image tag whose default is the chart's appVersion
-    tag: "ewelch-distributed-helm-chart-17db5ee"
-    # -- Overrides the image tag with an image digest
-    digest: null
-    # -- Docker image pull policy
-    pullPolicy: IfNotPresent
-# The Loki canary pushes logs to and queries from this loki installation to test
-# that it's working correctly
+  enabled: false
+
 lokiCanary:
-  enabled: true
-  # -- If true, the canary will send directly to Loki via the address configured for verification --
-  # -- If false, it will write to stdout and an Agent will be needed to scrape and send the logs --
-  push: true
-  # -- The name of the label to look for at loki when doing the checks.
-  labelname: pod
-  # -- Additional annotations for the `loki-canary` Daemonset
-  annotations: {}
-  # -- Additional labels for each `loki-canary` pod
-  podLabels: {}
-  service:
-    # -- Annotations for loki-canary Service
-    annotations: {}
-    # -- Additional labels for loki-canary Service
-    labels: {}
-  # -- Additional CLI arguments for the `loki-canary' command
-  extraArgs: []
-  # -- Environment variables to add to the canary pods
-  extraEnv: []
-  # -- Environment variables from secrets or configmaps to add to the canary pods
-  extraEnvFrom: []
-  # -- Volume mounts to add to the canary pods
-  extraVolumeMounts: []
-  # -- Volumes to add to the canary pods
-  extraVolumes: []
-  # -- Resource requests and limits for the canary
-  resources: {}
-  # -- DNS config for canary pods
-  dnsConfig: {}
-  # -- Node selector for canary pods
-  nodeSelector: {}
-  # -- Tolerations for canary pods
-  tolerations: []
-  # -- The name of the PriorityClass for loki-canary pods
-  priorityClassName: null
-  # -- Image to use for loki canary
-  image:
-    # -- The Docker registry
-    registry: docker.io
-    # -- Docker image repository
-    repository: grafana/loki-canary
-    # -- Overrides the image tag whose default is the chart's appVersion
-    tag: null
-    # -- Overrides the image tag with an image digest
-    digest: null
-    # -- Docker image pull policy
-    pullPolicy: IfNotPresent
-  # -- Update strategy for the `loki-canary` Daemonset pods
-  updateStrategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 1
+  enabled: false
+
 ######################################################################################################################
 #
 # Service Accounts and Kubernetes RBAC
